# effs

./: Cargo.toml  README.md
effs/: Cargo.toml
effs-cli/: Cargo.toml
effs-cli/src/: main.rs
effs-image/: Cargo.toml
effs-image/src/: transform.rs
effs/src/: effect.rs  effs.rs  entry.rs  error.rs  filter.rs  future.rs  lib.rs  node.rs  source.rs  traits.rs
effs/src/effs/: fs.rs
effs/src/future/: file_size.rs  filtrate.rs
effs/src/node/: fs.rs
