[workspace]
members = [
    "effs",
    "effs-cli",
    "effs-image",
]
default-members = [
    "effs",
    "effs-cli",
    "effs-image",
]
resolver = "2"

[workspace.dependencies]
effs = { path = "./effs", version = "0.0.1" }
effs-image = { path = "./effs-image", version = "0.0.1" }

anyhow = "1.0.0"
fuse3 = "0.8.1"
futures-util = "0.3.30"
image = "0.25.4"
indextree = "4.7.3"
libc = "0.2.158"
pin-project-lite = "0.2.15"
tempfile = "3.13.0"
thiserror = "1.0.0"
tokio = "1.35"
tracing = "0.1.40"
tracing-subscriber = "0.3"
