[package]
name = "effs"
version = "0.0.1"
edition = "2021"

[dependencies]
fuse3 = { workspace = true, features = ["tokio-runtime", "unprivileged"] }
futures-util = { workspace = true }
indextree = { workspace = true }
libc = { workspace = true }
pin-project-lite = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
